--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
+    "lint": "prettier --check .",
     "format": "prettier --write ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run format && yarn format && git add -A."
+    }
   },
   "author": "jahid-khan",
   "license": "ISC",
@@ -14,5 +19,7 @@
     "eslint": "^8.48.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.3"
+  },
+  "dependencies": {
   }
 }
