--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accelerators-eslint-husky-prettier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "These are those library which can be directly installed in our react app & can serve a particular task",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,6 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
+    "commander": "^11.0.0"
   }
 }
